fixed z-index

--- a/app/components/frame/style.css
+++ b/app/components/frame/style.css
@@ -21,4 +21,5 @@ button.showhide{
   position: absolute;
   bottom: 1em;
   right: 1em;
+  z-index: 1;
 }
